Fix: Implement feedback changes for home page
Mostly making things fit the page, making things full width, etc.

--- a/src/app.scss
+++ b/src/app.scss
@@ -50,7 +50,7 @@ body{
 }
 
 #router-view {
-    //padding-top: 160px; // Account for the nav bar by offsetting the first 60px.
+    padding-top: 60px; // Account for the nav bar by offsetting the first 60px.
     background-repeat: no-repeat;
 }
 
