Fix: Implement feedback for photo strip behavior
The buttons now work. Sliding doesn't wrap anymore but now there is no erratic behavior on load.

--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -8,12 +8,12 @@ photo-strip {
 
 .slide-list {
     position: relative;
-    transform: translateX(-50%);
     display: inline-block;
     white-space: nowrap;
 
     img { 
         display: inline-block;
+        max-height: 100%;
     }
 }
 
