--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -4,16 +4,22 @@ photo-strip {
     width: 100%;
     overflow: hidden;
     background-color: #ccc;
+
+    help {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 }
 
 .slide-list {
     position: relative;
-    transform: translateX(-50%);
     display: inline-block;
     white-space: nowrap;
 
     img { 
         display: inline-block;
+        max-height: 100%;
     }
 }
 
@@ -43,3 +49,4 @@ photo-strip {
 {
     left: 0%;
 }
+
