Fix: Implement feedback changes for member detail page

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -229,3 +229,14 @@ ux-dialog-containerxxx {
     opacity: 0.6;
 }
 
+#member-detail #breadcrumb {
+    background-color: lightgrey;
+    padding: 10px;
+    line-height: 20px;
+}
+
+#member-detail #stories {
+    padding-right:15px;
+    border: solid 6px white;
+    background-color: rgba(208, 208, 208, 0.5);
+}
