--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -58,55 +58,6 @@ ul.family span {
     right: 34px;
 }
 
-div.member-story-panel {
-    max-height: 160px;
-    overflow: auto;
-    min-height: 200px;
-    >p {
-        padding-bottom: 2px;
-        padding-left:12px;
-        text-align: justify;
-    }
-    &.larger {
-        p {
-            font-size:110%;
-        }
-    }
-    a {
-        color: blue;
-    }
-}
-
-div.story-box {
-    position: relative;
-    float: right;
-    padding-right: 12px;
-    a.goto-story-page {
-        position:absolute;
-        left:-28px;
-    }
-    &.last {
-        padding-right: 0px;
-    }
-    padding-left: 0px;
-    height:258px;
-    &.notfirst {
-        border-left: solid 6px white;
-    }
-    a {
-        color: black;
-        float: left;
-        cursor: pointer;
-        margin-left:30px;
-    }
-    h4 {
-        width:255px;
-    }
-    span.name {
-        font-weight: bold;
-    }
-}
-
 //member picker
 
 div.member-list {
@@ -235,8 +186,73 @@ ux-dialog-containerxxx {
     line-height: 20px;
 }
 
+#member-detail #member-detail-content > div {
+    height: calc(100vh - 713px);
+    min-height: 271px;
+
+    .member-story-panel {
+        overflow-y: auto;
+        height: calc(100% - 53px);
+    }
+}
+
 #member-detail #stories {
+    position: relative;
     padding-right:15px;
-    border: solid 6px white;
-    background-color: rgba(208, 208, 208, 0.5);
+
+    .story-box {
+        height: 260px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        border-top: 6px solid white;
+        border-bottom: 6px solid white;
+        border-left: 6px solid white;
+        background-color: rgba(208, 208, 208, 0.5);
+
+        &:last-child {
+            border-top: 6px solid white;    
+        }
+
+        .member-story-header {
+            height: 45px;
+        }
+
+        .member-story-panel {
+            height: 185px;
+            overflow-y: auto;
+
+            &.larger {
+                p {
+                    font-size:110%;
+                }
+            }
+
+            > p {
+                padding-bottom: 2px;
+                padding-left: 12px;
+                text-align: justify;
+            }
+
+            a {
+                color: blue;
+            }
+        }
+
+        a.goto-story-page {
+            position:absolute;
+            left:-28px;
+        }
+        a {
+            color: black;
+            float: left;
+            cursor: pointer;
+            margin-left:30px;
+        }
+        h4 {
+            width:255px;
+        }
+        span.name {
+            font-weight: bold;
+        }
+    }
 }
