height change in photo strip

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -199,6 +199,7 @@ ux-dialog-containerxxx {
 #member-detail #stories {
     position: relative;
     padding-right:15px;
+    padding-top:6px;
 
     .story-box {
         height: 260px;
