--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -3,9 +3,8 @@ div.main-panel {
     padding: 16px;
     background-color: rgba(0,0,0,0);
     margin-bottom: 20px;
-
     > div {
-        height: calc(100vh - 619px);
+        height: 100%;
         min-height: 25vh;
         margin-top: 15px;
         overflow-y: auto;
