--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -198,20 +198,24 @@ ux-dialog-containerxxx {
 
 #member-detail #stories {
     position: relative;
-    padding-right:15px;
-    padding-top:6px;
+    //padding-right:15px;
+    padding: 0;
+    border: solid 6px white;
 
     .story-box {
         height: 260px;
         overflow-y: auto;
         overflow-x: hidden;
-        border-top: 6px solid white;
-        border-bottom: 6px solid white;
+        //border-top: 6px solid white;
+        //border-bottom: 6px solid white;
         border-left: 6px solid white;
         background-color: rgba(208, 208, 208, 0.5);
 
         &:last-child {
-            border-top: 6px solid white;    
+            border-left: none;    
+        }
+        &:first-child {
+            border: none;
         }
 
         .member-story-header {
