--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -260,3 +260,10 @@ div.member-story-panel {
     }
 }
 
+//date-range
+.member-info .date-range label {
+    margin-right:-16px;
+    padding:4px;
+    width:100px;
+}
+
