--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -68,3 +68,10 @@ ux-dialog-overlay.active {
     background-color: black;
     opacity: 0.9;
 }
+
+.full-size-photo .date-range label {
+    margin-right:-6px;
+    padding:4px;
+    width:100px;
+}
+
