--- a/src/photos/photos.scss
+++ b/src/photos/photos.scss
@@ -26,3 +26,15 @@ div.panel.panel-default {
     background-color: white;
 }
 
+.photos .date-range label {
+    margin-right:-6px;
+    padding:4px;
+    width:100px;
+}
+
+.photo-detail .date-range label {
+    margin-right:-6px;
+    padding:4px;
+    width:100px;
+}
+
