--- a/src/app.scss
+++ b/src/app.scss
@@ -210,6 +210,11 @@ ul.nav {
     }
 }
 
+ul.nav > li > a {
+    padding-right:10px;
+    padding-left:10px;
+}
+
 .my-container {
     position: relative;
     background: #5C97FF;
