--- a/src/app.scss
+++ b/src/app.scss
@@ -7,6 +7,9 @@ $navbar-default-link-active-color: blue;
 $navbar-default-link-active-bg: inherit;
 @import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
 @import '../node_modules/aurelia-slickgrid/dist/styles/sass/slickgrid-theme-bootstrap';
+@import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
+@import '../node_modules/froala-editor/css/froala_style.min';
+
 @import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
 
 html, body {
