--- a/src/resources/elements/chats/chats.scss
+++ b/src/resources/elements/chats/chats.scss
@@ -9,3 +9,17 @@ a:disabled {
     color: lightgray;
     background: yellow;
 }
+
+div.message-collection {
+    height: 609px;
+    //overflow-y: auto;
+}
+
+ul.rtl {
+    direction: rtl;
+}
+
+ul.ltr {
+    direction: ltr;
+}
+
