--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,7 @@ $navbar-default-link-active-bg: inherit;
 @import '../node_modules/aurelia-slickgrid/dist/styles/sass/slickgrid-theme-bootstrap';
 @import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
 @import '../node_modules/froala-editor/css/froala_style.min';
+@import '../node_modules/json.human/css/json.human';
 
 @import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
 
