--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,8 @@ $navbar-default-link-active-bg: inherit;
 @import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
 @import '../node_modules/froala-editor/css/froala_style.min';
 @import '../node_modules/json.human/css/json.human';
+@import '../node_modules/ag-grid/dist/styles/ag-grid';
+@import '../node_modules/ag-grid/dist/styles/ag-theme-balham';
 
 @import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
 
