hit counts sorting icons

--- a/src/admin/hit-counts.scss
+++ b/src/admin/hit-counts.scss
@@ -1,5 +1,5 @@
 .aut-sort::before{
-    font-family: "Font Awesome 5 Regular";
+    font-family: "Font Awesome 5 Pro";
     padding-right: 0.5em;
     width: 1.28571429em;
     display: inline-block;
@@ -24,13 +24,5 @@
 
 th {
     background-color: lightgray;
-}
-
-.aut-desc {
-    color: blue;
-}
-
-.aut-asc {
-    color: green;
 }
 
