--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -18,6 +18,21 @@ div.checkable.selected {
     background-color: lightblue;
 }
 
+div.palette-default div.editable {
+    background-color: default;
+}
+
+div.palette-oldie div.editable {
+    background-color:beige;
+}
+
+div.palette-sky div.editable {
+    background-color: lightblue;
+}
+
+div.palette-earth div.editable {
+    background-color: lightseagreen;
+}
 
 
 
