use story preview in story list

--- a/src/palettes.scss
+++ b/src/palettes.scss
@@ -8,6 +8,9 @@ div.palette-default {
     div.detail-header {
         background-color: #cccccc;
     }
+    div.member-of-the-day {
+        background-color: #3e4142;
+    }
 }
     
 div.palette-oldie {
@@ -19,6 +22,9 @@ div.palette-oldie {
     }
     div.detail-header {
         background-color: lightseagreen;
+    }
+    div.member-of-the-day {
+        background-color: #cbc5ac;
     }
 }
     
@@ -32,6 +38,9 @@ div.palette-sky {
     div.detail-header {
         background-color: mediumaquamarine;
     }
+    div.member-of-the-day {
+        background-color: #5e7056;
+    }
 }
 
 div.palette-earth {
@@ -43,6 +52,9 @@ div.palette-earth {
     }
     div.detail-header {
         background-color: green;
+    }
+    div.member-of-the-day {
+        background-color: olivedrab;
     }
 }
 
