--- a/src/palettes.scss
+++ b/src/palettes.scss
@@ -54,7 +54,7 @@ div.palette-earth {
         background-color: green;
     }
     div.member-of-the-day {
-        background-color: olivedrab;
+        background-color: mediumaquamarine;
     }
 }
 
