colors. cursor pointer for whole story box.

--- a/src/palettes.scss
+++ b/src/palettes.scss
@@ -6,7 +6,7 @@ div.palette-default {
         background-color: default;
     }
     div.detail-header {
-        background-color: #cccccc;
+        background-color: #bbbbbb;
     }
     div.member-of-the-day {
         background-color: #3e4142;
@@ -21,7 +21,7 @@ div.palette-oldie {
         background-color:beige;
     }
     div.detail-header {
-        background-color: lightseagreen;
+        background-color: rgba(180, 80, 0, 0.5);
     }
     div.member-of-the-day {
         background-color: #cbc5ac;
@@ -36,7 +36,7 @@ div.palette-sky {
         background-color: lightblue;
     }
     div.detail-header {
-        background-color: mediumaquamarine;
+        background-color: rgba(0, 80, 180, 0.5);
     }
     div.member-of-the-day {
         background-color: #5e7056;
@@ -51,7 +51,7 @@ div.palette-earth {
         background-color: lightseagreen;
     }
     div.detail-header {
-        background-color: green;
+        background-color: rgba(80, 180, 0, 0.5);
     }
     div.member-of-the-day {
         background-color: mediumaquamarine;
