new multi select - wip

--- a/src/resources/elements/multi-select/multi-select-new.scss
+++ b/src/resources/elements/multi-select/multi-select-new.scss
@@ -49,6 +49,14 @@
        color: black;
     }
 
+    li.odd-group {
+        background-color: lightblue;
+    }
+
+    /*li.even-group {
+        background-color: yellow;
+    }*/
+
     .ms-tooltip {
         ul {
             list-style-type: hebrew;
