new multi select. colors. wip.

--- a/src/palettes.scss
+++ b/src/palettes.scss
@@ -17,7 +17,7 @@ div.palette-oldie {
     div.top-head, div.footer-area {
         background: rgba(180, 80, 0, 0.3);
     }
-    div.editable {
+    div.editable, div.story-prefix {
         background-color:beige;
     }
     div.detail-header {
