mostly style issues

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -53,7 +53,7 @@ ul.message {
     }
 }
 
-div.story-prefix {
+div.story-preview {
     p {
         text-align: justify;
         padding-left:12px;
