--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -197,6 +197,7 @@ ux-dialog-containerxxx {
         //border-top: 6px solid white;
         //border-bottom: 6px solid white;
         background-color: rgba(208, 208, 208, 0.5);
+        padding-right:8px;
         cursor: pointer;
         &.notfirst {
             border-left: 6px solid white;
@@ -213,6 +214,10 @@ ux-dialog-containerxxx {
             }
         }
 
+        .member-story-preview {
+            padding-right: 8px;
+            width:256px;
+        }
 
         a.goto-story-page {
             position:absolute;
