prev next arrows visibiillty

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -106,11 +106,12 @@ ux-dialog-containerxxx {
 #stories .slide-control.next
 {
     right: 6px;
+    color: grey;
 }
 #stories .slide-control.prev
 {
     left: 6px;
-    color: white;
+    color: grey;
 }
 
 .family-chains button
