member stories prev/next

--- a/src/members/members.scss
+++ b/src/members/members.scss
@@ -105,12 +105,13 @@ ux-dialog-containerxxx {
 
 #stories .slide-control.next
 {
-    right: 6px;
+    right: 0px;
+    color: grey;
 }
 #stories .slide-control.prev
 {
-    left: 6px;
-    color: white;
+    left: 0px;
+    color: grey;
 }
 
 .family-chains button
