--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,38 @@
-@import 'resources/elements/photo-strip';
-@import './palettes';
+/* Includes */
+@import 'breakpoints';
+@import 'palettes';
+// @import 'scrollbox';
+@import 'grid';
 
+/* Variables */
 $slide-height: 220px;
 $list-group-border:none; 
 $list-group-bg: #eeeeee;
 $navbar-default-link-active-color: blue;
 $navbar-default-link-active-bg: inherit;
-@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
-@import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
-@import '../node_modules/froala-editor/css/froala_style.min';
-@import '../node_modules/json.human/css/json.human';
 
-@import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
+/* Pages */
+@import 'app';
+@import 'home/home';
 
+/* Elements */
+@import 'resources/elements/photo-strip';
+
+/* Globals */
 html, body {
+    height: 100vh;
     width: 100vw;
-    overflow-x: hidden;
+    font-family: "Alef Hebrew",
+                 “Helvetica Neue”,
+                 Helvetica,
+                 Arial,
+                 sans-serif !important;
+}
+
+body > .page-container {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
 }
 
 div, footer, main {
@@ -23,51 +40,8 @@ div, footer, main {
     padding: 0;
 }
 
-body{
-  font-family: "Alef Hebrew",
-               “Helvetica Neue”,
-               Helvetica,
-               Arial,
-               sans-serif;
-   max-width: 100vw;
-}
-
-.navbar-default {
-    background: white !important;
-}
-.navbar-brand{
-    font-weight: bold;
-}
-.top-head {
-    background-repeat: no-repeat;
-    //height: 400px;
-    div.page-title {
-        padding-top:0px;
-        padding-right:15px;
-        width:1170px;
-        margin-left:auto;
-        margin-right:auto;
-        height:96px;
-        margin-top:0px;
-        background-repeat:no-repeat;
-        margin-top:-20px;
-    }
-}
-
-#router-view {
-    padding-top: 60px; // Account for the nav bar by offsetting the first 60px.
-    background-repeat: no-repeat;
-}
-
-#footer {
-    margin-top: 5vh;
-    height: 67px;
-
-    .footer-area {
-        background-repeat: no-repeat;
-        line-height: 67px;    
-        text-align: center;
-    }
+li {
+    list-style-type: none;
 }
 
 a.border-right
@@ -75,11 +49,6 @@ a.border-right
     border-right:solid gray 1px;
     margin-right:4px;
     padding-right:4px;
-}
-
-body {
-    margin-left: auto;
-    margin-right: auto;
 }
 
 ux-dialog-overlay.active {
@@ -169,16 +138,6 @@ i.is-link {
     cursor: pointer;
 }
 
-/* INFO [Matt] Definitely don't want a position: fixed on this, as it will
-force ethe element to remain at the same position of the screen irrespective
-of scrolling. */
-
-// .full-width-div {
-//     position: fixed;
-//     width: 100%;
-//     left: 0;
-// }
-
 .error {
     background-color: red;
     color: white;
@@ -263,3 +222,9 @@ ul.nav > li > a {
     font-size: 150%;
 }
 
+/* Dependencies */
+@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '../node_modules/froala-editor/css/froala_editor.pkgd.min';
+@import '../node_modules/froala-editor/css/froala_style.min';
+@import '../node_modules/json.human/css/json.human';
+@import url(http://fonts.googleapis.com/earlyaccess/alefhebrew.css);
