fix: Support the optional page header

--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -20,6 +20,16 @@ $navbar-height: 60px;
     }
 }
 
-#router-view {
+.top-head {
+    position: absolute;
+    top: $navbar-height;
+    width: 100%;
+}
+
+.navbar + #router-view {
     padding-top: $navbar-height;
+}
+
+.top-head + #router-view {
+    padding-top: $navbar-height + 80px;
 }
