--- a/src/_app.scss
+++ b/src/_app.scss
@@ -84,8 +84,9 @@
 }
 
 .top-head {
+    height: 80px;
     background-repeat: no-repeat;
-    //height: 400px;
+
     div.page-title {
         padding-top:0px;
         padding-right:15px;
