--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -35,6 +35,12 @@ $navbar-height: 108px;
     position: absolute;
     top: $navbar-height;
     width: 100%;
+
+    .page-title > span {
+        background: rgba(255,255,255,0.65);
+        border-radius: 24px;
+        padding: 0 6px;
+    }
 }
 
 .navbar + #router-view {
