--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -12,11 +12,18 @@ $navbar-height: 60px;
     }
 
     .nav-item {
-        padding: 0.5em;
+        font-size: 1.6rem;
+        line-height: 1.6rem;
+        padding: 0.7rem;
     }
 
     .navbar-logo {
-        font-size: 2.5rem;
+        font-size: 2rem;
+
+        img {
+            width: 3rem;
+            margin-left: 0.5rem;
+        }
     }
 }
 
