--- a/src/_app.scss
+++ b/src/_app.scss
@@ -16,11 +16,14 @@
 
     .loader {
         justify-self: flex-start;
+        font-size: 1.5em;
     }
 
     .nav-items {
+        display: flex;
         flex: 1;
-        text-align: right;
+        justify-content: flex-end;
+        align-items: center;
     }
 
     .nav-item {
@@ -36,17 +39,6 @@
         display: inline-block;
         font-weight: bold;
         color: inherit;
-
-        img {
-            width: 3rem;
-            margin-left: 0.5rem;
-            vertical-align: middle;
-        }
-    }
-
-    .loader {
-        display: inline-block;
-        vertical-align: middle;
     }
 }
 
