fix: Revert mobile nav font sizes to fit fixed nav header

--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -23,10 +23,10 @@ $navbar-height: 108px;
 
     .nav-item,
     .navbar-logo {
-        font-size: 4.25vw;
+        font-size: 1.8rem;
 
         img {
-            width: 24px;
+            width: 28px;
             margin-left: 0.25rem;
         }
     }
