--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -11,10 +11,16 @@ $navbar-height: 108px;
     .navbar-search {
         width: 100%;
         margin-bottom: 0.5rem;
+        align-self: flex-start;
+    }
+
+    .navbar-search {
+        order: -2;
     }
 
     .navbar-controls {
         align-self: flex-start;
+        order: -3;
     }
 
     .nav-item {
