--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -19,7 +19,7 @@ $navbar-height: 108px;
     }
 
     .navbar-controls {
-        align-self: flex-start;
+        align-self: flex-end;
         order: -3;
     }
 
