--- a/src/_app.scss
+++ b/src/_app.scss
@@ -52,7 +52,7 @@
 
     .search-box-container {
         position: relative;
-        flex: 1;
+        //flex: 1;
         margin-bottom: 0;
         margin-right: 0.5rem;
 
