--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ html, body {
 body > .page-container {
     height: 100%;
     width: 100%;
-    overflow: auto;
+    //overflow: auto;
 }
 
 div, footer, main {
