--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -25,6 +25,13 @@ $navbar-height: 60px;
             margin-left: 0.5rem;
         }
     }
+
+    .search-box {
+        width: 460px;
+        label {
+            width: 400px;
+        }
+    }
 }
 
 .top-head {
