--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -2,9 +2,9 @@
     display: flex;
     
     @include desktop {
-        min-width: 900px;
-        width: 75vw;
-        max-width: 1200px;
+        //min-width: 900px;
+        width: 1200px;
+        //max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
     }
