.top-head back to the main scss file

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -97,3 +97,19 @@
         cursor: pointer;
     }
 }
+
+.top-head {
+    height: 80px;
+    z-index: 1;
+
+    .page-title {
+        @include container;
+        display: block;
+        height: 96px;
+		margin: 0 auto;
+        padding: 0 6px;
+        background-repeat: no-repeat;
+        line-height: 80px;
+        font-size: 36px;
+    }
+}
