fix(app): Adjust mobile navbar height
Before it was expected to be 108px. Now it is 78px.

Also, made the .hide-if-small class globally available.

--- a/src/_breakpoints.scss
+++ b/src/_breakpoints.scss
@@ -1,5 +1,11 @@
 @mixin mobile {
-    @media (max-width: 1199px) { @content; }
+    @media (max-width: 1199px) {
+        @content;
+
+        .hide-if-small {
+            display: none;
+        }
+    }
 }
 
 @mixin desktop {
