--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -1,9 +1,12 @@
+$desktop-width: 1200px;
+
 @mixin container {
     display: flex;
-    
+
     @include desktop {
         //min-width: 900px;
-        width: 1200px;
+        width: $desktop-width;
+;
         //max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
@@ -22,4 +25,10 @@
 
 .expand {
     @include flex(1, 0, auto);
+}
+
+.container {
+    @include desktop {
+        width: $desktop-width !important;
+    }
 }
