fix(app): Fix the desktop router view height to fill the screen
It is already offset on top by the navbar height. This change removes the margin from the footer, and sets the router-view height to the viewport height minus the navbar and the footer.

--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -41,6 +41,10 @@ $navbar-height: 60px;
     }
 }
 
+#router-view {
+    height: calc(100vh - 67px);
+}
+
 .top-head {
     position: absolute;
     top: $navbar-height;
