fix(app): Refactor the search bar to fill remaining space on desktop
Keep the behavior of the nav items filling the remaining space on mobile.

--- a/src/_app.mobile.scss
+++ b/src/_app.mobile.scss
@@ -7,6 +7,10 @@ $navbar-height: 78px;
     align-items: flex-end;
     flex-wrap: wrap;
 
+    .navbar-main {
+        flex: 1;
+    }
+
     .navbar-main,
     .navbar-search {
         margin-bottom: 0.5rem;
