--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -26,14 +26,13 @@ $navbar-height: 60px;
         }
     }
 
-    .search-box {
-        width: 460px;
-        label {
-            width: 400px;
-        }
-    }
-
     .navbar-search {
+        flex: 1;
+
+        .search-box,
+        .search-box-container {
+            width: 100%;
+        }
     }
 
     .navbar-controls {
