more minor layout issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* Includes */
 @import 'breakpoints';
 @import 'palettes';
-// @import 'scrollbox';
+@import 'scrollbox';
 @import 'grid';
 
 /* Variables */
