fix(photo-strip): Handle edge cases
- Set dragging to false on click on the photo-strip instead of leaving it to click on an individual image, since sometimes you might mousedown on one image, drag to the end, and mouseup on a different image
- Force disabled HTML5 drag and drop on the images
- Disabled user-select on the images as well

--- a/src/resources/elements/photo-strip.scss
+++ b/src/resources/elements/photo-strip.scss
@@ -21,9 +21,10 @@ photo-strip {
         cursor: all-scroll;
     }
 
-    img { 
+    img {
         display: inline-block;
         max-height: 100%;
+        user-select: none;
     }
 }
 
@@ -34,7 +35,7 @@ photo-strip {
 
     // INFO [Matt] These top & margin-top styles are the quintessential "vertical center" pattern.
     top: 50%;
-    margin-top: -21px; 
+    margin-top: -21px;
 
     color: white;
     opacity: 0.6;
