--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -16,13 +16,14 @@ $navbar-height: 60px;
     }
 
     .nav-item {
-        font-size: 1.6rem;
-        line-height: 1.6rem;
+        font-size: 1.9rem;
+        line-height: 1.9rem;
         padding: 0.7rem;
+        padding-top: 1.1rem;
     }
 
     .navbar-logo {
-        font-size: 2rem;
+        font-size: 2.6rem;
 
         img {
             width: 3rem;
