--- a/src/_app.desktop.scss
+++ b/src/_app.desktop.scss
@@ -16,17 +16,17 @@ $navbar-height: 60px;
     }
 
     .nav-item {
-        font-size: 1.9rem;
-        line-height: 1.9rem;
+        font-size: 2.1rem;
+        line-height: 2.1rem;
         padding: 0.7rem;
-        padding-top: 1.1rem;
     }
 
     .navbar-logo {
-        font-size: 2.6rem;
+        font-size: 3.4rem;
+        padding-bottom: 1rem;
 
         img {
-            width: 3rem;
+            width: 3.4rem;
             margin-left: 0.5rem;
         }
     }
