--- a/src/photos/full-size-photo.scss
+++ b/src/photos/full-size-photo.scss
@@ -6,14 +6,14 @@ button.face {
     border-radius: 50%;
     border-color: rgba(0, 0, 0, 0);
     border-style: solid;
-    border-width: 10px;
+    border-width: 8px;
     opacity: 0;
     position: absolute;
 }
 
 .slide.highlight-faces button.face {
-    border-color: rgba(255, 255, 0, 0.9);
-    opacity: 0.5;
+    border-color: rgba(255, 255, 0, 0.6);
+    opacity: 0.9;
     color: orange;
     font-weight: bolder;
 }
@@ -49,20 +49,15 @@ button.face:hover {
     }
 }
 
-/*.highlighter {
-    z-index:9999;
-    top: 0px;
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0);
-    border: none;
+.full-size-photo .highlighted-face {
+    background-color:black;
+    color:yellow;
+    //font-weight: bolder;
+    opacity:1.0;
+    position:absolute;
+    font-size:70%;
 }
-*/
-span.highlighted-face {
-    color: yellow;
-    font-weight: bolder;
-}
+
 
 ux-dialog-overlay.active {
     background-color: black;
