--- a/src/resources/elements/editable.scss
+++ b/src/resources/elements/editable.scss
@@ -14,6 +14,12 @@ div.story-panel {
     }
 }
 
+div.preview-header,
+div.story-section p {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
 div.checkable.selected {
     background-color: lightblue;
 }
