--- a/src/stories/stories.scss
+++ b/src/stories/stories.scss
@@ -15,11 +15,12 @@ ux-dialog>ux-dialog-body {
 div.big-story-panel {
     //width: 600px;
     overflow: auto;
+    padding-left: 12px;
+    padding-right: 12px;
     p {
         font-size: 110%;
         text-align: justify;
         padding-bottom: 2px;
-        padding-left: 12px;
     }
     a {
         color: blue;
@@ -138,6 +139,9 @@ div.story-preview {
     div>img {
         padding-left:10px;
         align-self: stretch;
+    }
+    .story-body {
+        width:100%;
     }
 }
 
